fixed overflow at body

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -146,6 +146,7 @@ body {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     background-color: #e4e3e3;
+    cursor: pointer;
 }
 .input-container__button:active {
     background-color: #a4a4a4;
@@ -476,6 +477,7 @@ body {
     background-color: #ff380c;
     color: white;
     font-weight: bold;
+    cursor: pointer;
     transform: translateY(40px);
 }
 .modal-alert-container__button:active {
